--- a/Proxy.html
+++ b/Proxy.html
@@ -68,24 +68,11 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown"><a class="nav-link link text-white text-primary dropdown-toggle show display-4" href="Tatkal Software.html" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><span class="mobi-mbri mobi-mbri-cart-add mbr-iconfont mbr-iconfont-btn" style="color: rgb(247, 0, 0);"></span>Software</a><div class="dropdown-menu show" aria-labelledby="dropdown-221" data-bs-popper="none"><a class="text-white text-primary dropdown-item display-4" href="covid19.html">Covid 19&nbsp;</a><a class="text-white text-primary dropdown-item display-4" href="nexus.html">Nexus&nbsp;</a><a class="text-white text-primary dropdown-item display-4" href="ngetx.html">Nget X</a><a class="text-white text-primary dropdown-item display-4" href="hyper.html">Hyper</a><a class="text-white text-primary dropdown-item display-4" href="tatkaladda.html">Tatkal Adda</a><a class="text-white text-primary dropdown-item display-4" href="superts.html">Super Ts</a><a class="text-white text-primary dropdown-item display-4" href="sikka.html">Sikka V2</a><a class="text-white text-primary dropdown-item display-4" href="nexusadvance.html">Nexus Advance</a><a class="text-white text-primary dropdown-item display-4" href="blacktiger.html">Black Tiger v2</a></div></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="tatkalvps.html"><span class="mbri-windows mbr-iconfont mbr-iconfont-btn" style="color: rgb(0, 255, 16);"></span>VPS</a></li>
+                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown"><a class="nav-link link text-white text-primary dropdown-toggle display-4" href="Tatkal Software.html" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><span class="mobi-mbri mobi-mbri-cart-add mbr-iconfont mbr-iconfont-btn" style="color: rgb(247, 0, 0);"></span>Software</a><div class="dropdown-menu" aria-labelledby="dropdown-221"><a class="text-white text-primary dropdown-item display-4" href="covid19.html">Covid 19&nbsp;</a><a class="text-white text-primary dropdown-item display-4" href="nexus.html">Nexus&nbsp;</a><a class="text-white text-primary dropdown-item display-4" href="ngetx.html">Nget X</a><a class="text-white text-primary dropdown-item display-4" href="hyper.html">Hyper</a><a class="text-white text-primary dropdown-item display-4" href="tatkaladda.html">Tatkal Adda</a><a class="text-white text-primary dropdown-item display-4" href="superts.html">Super Ts</a><a class="text-white text-primary dropdown-item display-4" href="sikka.html">Sikka V2</a><a class="text-white text-primary dropdown-item display-4" href="nexusadvance.html">Nexus Advance</a><a class="text-white text-primary dropdown-item display-4" href="blacktiger.html">Black Tiger v2</a></div></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="tatkalvps.html"><span class="mbri-windows mbr-iconfont mbr-iconfont-btn" style="color: rgb(0, 255, 16);"></span>VPS</a></li>
                     <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="tatkalProxy.html"><span class="mobi-mbri mobi-mbri-globe-2 mbr-iconfont mbr-iconfont-btn" style="color: rgb(247, 0, 0);"></span>&nbsp;Proxy</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="buyidforirctc.html"><span class="mobi-mbri mobi-mbri-users mbr-iconfont mbr-iconfont-btn" style="color: rgb(0, 255, 16);"></span>&nbsp;IRCTC ID</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://tatkalsoftware.live" target="_blank"><span class="mbri-pages mbr-iconfont mbr-iconfont-btn" style="color: rgb(247, 0, 0);"></span>Knowledge</a></li></ul>
                 
                 <div class="navbar-buttons mbr-section-btn"><a class="btn btn-primary display-4" href="https://wa.me/32460212752"><span class="socicon socicon-whatsapp mbr-iconfont mbr-iconfont-btn"></span>WhatsApp</a></div>
             </div>
-			<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/63f23ede31ebfa0fe7ee1ae5/1gpl4b6gg';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
         </div>
     </nav>
 </section>
@@ -247,12 +234,12 @@ s0.parentNode.insertBefore(s1,s0);
                     <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content">
                         <div class="card mb-3">
                             <div class="card-header" role="tab" id="headingOne">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_160" aria-expanded="false" aria-controls="collapse1">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_180" aria-expanded="false" aria-controls="collapse1">
                                     <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>IP VALIDITTY? Kya Aplog IP VPS Me Setting Karke Denge ?</strong></h6>
                                     <span class="sign mbr-iconfont mbri-arrow-down"></span>
                                 </a>
                             </div>
-                            <div id="collapse1_160" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                            <div id="collapse1_180" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body">
                                     <p class="mbr-fonts-style panel-text display-7">30 days from buying date. Yes Sure Hum Apko Apke Vps ME ip Setting karke denge lekin Apko apka Anydesk Share Karna Hoga.</p>
                                 </div>
@@ -260,14 +247,14 @@ s0.parentNode.insertBefore(s1,s0);
                         </div>
                         <div class="card mb-3">
                             <div class="card-header" role="tab" id="headingTwo">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse2_160" aria-expanded="false" aria-controls="collapse2">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse2_180" aria-expanded="false" aria-controls="collapse2">
                                     <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>IP BLOCK HUYA TO?</strong>
                                 </h6>
                                     <span class="sign mbr-iconfont mbri-arrow-down"></span>
                                 </a>
 
                             </div>
-                            <div id="collapse2_160" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                            <div id="collapse2_180" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                 <div class="panel-body">
                                     <p class="mbr-fonts-style panel-text display-7">Replace Miilega. Humara IP Block Nehi Hota humare IP me SecurityLaga Huya hai.&nbsp;</p>
                                 </div>
@@ -275,13 +262,13 @@ s0.parentNode.insertBefore(s1,s0);
                         </div>
                         <div class="card mb-3">
                             <div class="card-header" role="tab" id="headingThree">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse3_160" aria-expanded="false" aria-controls="collapse3">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse3_180" aria-expanded="false" aria-controls="collapse3">
                                     <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>Ip Itna Mehnga Q hai?</strong>
                                 </h6>
                                     <span class="sign mbr-iconfont mbri-arrow-down"></span>
                                 </a>
                             </div>
-                            <div id="collapse3_160" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapse3_180" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body">
                                     <p class="mbr-fonts-style panel-text display-7">Q ki eh India ki sabse Best Fast &amp; sucure IP Hai jo Specally IRCTC k liye Banaya gaya hai.</p>
                                 </div>
@@ -289,13 +276,13 @@ s0.parentNode.insertBefore(s1,s0);
                         </div>
                         <div class="card mb-3">
                             <div class="card-header" role="tab" id="headingThree">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse4_160" aria-expanded="false" aria-controls="collapse4">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse4_180" aria-expanded="false" aria-controls="collapse4">
                                     <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>IP KA PORT AOUR SERIUS KYA HAI?</strong>
                                 </h6>
                                     <span class="sign mbr-iconfont mbri-arrow-down"></span>
                                 </a>
                             </div>
-                            <div id="collapse4_160" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapse4_180" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body">
                                     <p class="mbr-fonts-style panel-text display-7">
                                        Q ki Hum IP Khud banate Hai Isliye Humare IP ka Port And Seris Always Uniqe Raheta hai.</p>
@@ -304,12 +291,12 @@ s0.parentNode.insertBefore(s1,s0);
                         </div>
                         <div class="card mb-3">
                             <div class="card-header" role="tab" id="headingThree">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse5_160" aria-expanded="false" aria-controls="collapse5">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse5_180" aria-expanded="false" aria-controls="collapse5">
                                    <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>IP SPEED?</strong></h6>
                                         <span class="mbr-iconfont mobi-mbri-arrow-down mobi-mbri"></span>
                                 </a>
                             </div>
-                            <div id="collapse5_160" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapse5_180" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body">
                                     <p class="mbr-fonts-style panel-text display-7">
                                        IP KA KOI SPEED NEHI HOTA HAI LOG SPEED KE NAM PE APKO BEWAKUF BANATE HAI. IP KA PING CHEAK KIYA JATA HAI AOUR PING SENDER AND RECIVER DONO SIDE PE DEPEND KARTA HAI.</p>
@@ -318,12 +305,12 @@ s0.parentNode.insertBefore(s1,s0);
                         </div>
                         <div class="card mb-3">
                             <div class="card-header" role="tab" id="headingThree">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse6_160" aria-expanded="false" aria-controls="collapse6">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse6_180" aria-expanded="false" aria-controls="collapse6">
                                     <h6 class="panel-title-edit mbr-fonts-style mb-0 display-7"><strong>REFUND MILEGA?</strong></h6>
                                     <span class="mbr-iconfont mobi-mbri-arrow-down mobi-mbri"></span>
                                 </a>
                             </div>
-                            <div id="collapse6_160" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapse6_180" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body">
                                     <p class="mbr-fonts-style panel-text display-7">
                                        After Successful Deliver No refund Proved By Our Company.&nbsp;&nbsp;</p>
