--- a/Knowledge.html
+++ b/Knowledge.html
@@ -68,24 +68,11 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown"><a class="nav-link link text-white text-primary dropdown-toggle show display-4" href="Tatkal Software.html" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><span class="mobi-mbri mobi-mbri-cart-add mbr-iconfont mbr-iconfont-btn" style="color: rgb(247, 0, 0);"></span>Software</a><div class="dropdown-menu show" aria-labelledby="dropdown-221" data-bs-popper="none"><a class="text-white text-primary dropdown-item display-4" href="covid19.html">Covid 19&nbsp;</a><a class="text-white text-primary dropdown-item display-4" href="nexus.html">Nexus&nbsp;</a><a class="text-white text-primary dropdown-item display-4" href="ngetx.html">Nget X</a><a class="text-white text-primary dropdown-item display-4" href="hyper.html">Hyper</a><a class="text-white text-primary dropdown-item display-4" href="tatkaladda.html">Tatkal Adda</a><a class="text-white text-primary dropdown-item display-4" href="superts.html">Super Ts</a><a class="text-white text-primary dropdown-item display-4" href="sikka.html">Sikka V2</a><a class="text-white text-primary dropdown-item display-4" href="nexusadvance.html">Nexus Advance</a><a class="text-white text-primary dropdown-item display-4" href="blacktiger.html">Black Tiger v2</a></div></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="tatkalvps.html"><span class="mbri-windows mbr-iconfont mbr-iconfont-btn" style="color: rgb(0, 255, 16);"></span>VPS</a></li>
+                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown"><a class="nav-link link text-white text-primary dropdown-toggle display-4" href="Tatkal Software.html" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false"><span class="mobi-mbri mobi-mbri-cart-add mbr-iconfont mbr-iconfont-btn" style="color: rgb(247, 0, 0);"></span>Software</a><div class="dropdown-menu" aria-labelledby="dropdown-221"><a class="text-white text-primary dropdown-item display-4" href="covid19.html">Covid 19&nbsp;</a><a class="text-white text-primary dropdown-item display-4" href="nexus.html">Nexus&nbsp;</a><a class="text-white text-primary dropdown-item display-4" href="ngetx.html">Nget X</a><a class="text-white text-primary dropdown-item display-4" href="hyper.html">Hyper</a><a class="text-white text-primary dropdown-item display-4" href="tatkaladda.html">Tatkal Adda</a><a class="text-white text-primary dropdown-item display-4" href="superts.html">Super Ts</a><a class="text-white text-primary dropdown-item display-4" href="sikka.html">Sikka V2</a><a class="text-white text-primary dropdown-item display-4" href="nexusadvance.html">Nexus Advance</a><a class="text-white text-primary dropdown-item display-4" href="blacktiger.html">Black Tiger v2</a></div></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="tatkalvps.html"><span class="mbri-windows mbr-iconfont mbr-iconfont-btn" style="color: rgb(0, 255, 16);"></span>VPS</a></li>
                     <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="tatkalProxy.html"><span class="mobi-mbri mobi-mbri-globe-2 mbr-iconfont mbr-iconfont-btn" style="color: rgb(247, 0, 0);"></span>&nbsp;Proxy</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="buyidforirctc.html"><span class="mobi-mbri mobi-mbri-users mbr-iconfont mbr-iconfont-btn" style="color: rgb(0, 255, 16);"></span>&nbsp;IRCTC ID</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://tatkalsoftware.live" target="_blank"><span class="mbri-pages mbr-iconfont mbr-iconfont-btn" style="color: rgb(247, 0, 0);"></span>Knowledge</a></li></ul>
                 
                 <div class="navbar-buttons mbr-section-btn"><a class="btn btn-primary display-4" href="https://wa.me/32460212752"><span class="socicon socicon-whatsapp mbr-iconfont mbr-iconfont-btn"></span>WhatsApp</a></div>
             </div>
-			<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/63f23ede31ebfa0fe7ee1ae5/1gpl4b6gg';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
         </div>
     </nav>
 </section>
@@ -124,9 +111,9 @@ s0.parentNode.insertBefore(s1,s0);
                             <div class="text-wrapper">
                                 <h6 class="card-subtitle mbr-fonts-style mb-2 display-4">&nbsp;Latest Tips &amp; News</h6>
                                 <h5 class="card-title mbr-fonts-style display-5">
-                                    <strong>Read Blog</strong></h5>
+                                    <strong>Read Blog 🕮</strong></h5>
                                 <p class="mbr-text mbr-fonts-style mb-5 display-4">You don't have to code when you create your own site. Select one of available themes in the Mobirise sitebuilder.</p>
-                                <div class="mbr-section-btn"><a href="https://mobiri.se" class="btn btn-warning display-4">Read Blog</a></div>
+                                <div class="mbr-section-btn"><a href="https://mobiri.se" class="btn btn-black display-4"> 🕮&nbsp; READ NOW</a></div>
                             </div>
                         </div>
                         <div class="col-12 col-md-5">
@@ -143,11 +130,11 @@ s0.parentNode.insertBefore(s1,s0);
                         <div class="col-12 col-md-7">
                             <div class="text-wrapper">
                                 <h6 class="card-subtitle mbr-fonts-style mb-2 display-4">
-                                    Use Our Chat Sakha</h6>
+                                    Use Our Chat Sakha&nbsp;</h6>
                                 <h5 class="card-title mbr-fonts-style display-5">
-                                    <strong>Chat Bot</strong></h5>
+                                    <strong>Chat Bot 🤖</strong></h5>
                                 <p class="mbr-text mbr-fonts-style mb-5 display-4">Select the theme that suits you. Each theme in the Mobirise website building software contains a set of unique blocks.</p>
-                                <div class="mbr-section-btn"><a href="https://mobiri.se" class="btn btn-warning display-4">Ask To Sakha</a></div>
+                                <div class="mbr-section-btn"><a href="https://mobiri.se" class="btn btn-info display-4">🤖 Ask To Sakha&nbsp;</a></div>
                             </div>
                         </div>
                         <div class="col-12 col-md-5">
@@ -415,7 +402,7 @@ s0.parentNode.insertBefore(s1,s0);
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler mx-auto" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="nTJiKpG5Xzzw37EzlMEoopxF4HpDaGtl0ZwHNV+7wrbef95LePnCzovQLo60ZhOwBGqh5xHRljUSLq5eujSpjaWllglnaO60g+Eak8BQBR7LCGNnOhJi8aC1ZvuK6zyb">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler mx-auto" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="jjd6tQjMAmHB9uYKwaiTJYBIKPZ79b5BAOtX3aQYgOxb3B0Ocw2DvPXO4ZZ99KTYIX/HSTE59zZpImBv+uxQKrjNYZghoahJ6+Sb15BRZXV29IqlwxlG/OhJaFkOLg9f">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">yahoo ! thank you sending Us call back request. We will Call You Shortly.</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -530,7 +517,7 @@ s0.parentNode.insertBefore(s1,s0);
             
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2233234" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Built with &#8204;</p><a style="z-index:1" href="https://mobirise.com">Mobirise.com </a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2233234" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Created with &#8204;</p><a style="z-index:1" href="https://mobirise.com/offline-website-builder.html">Offline Website Builder</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
